feat: login with jwt token added
