# internal/service/authentication/authentication_requests.go
@@ -4,3 +4,8 @@ type RegisterUserRequest struct {
 	Email    string `json:"email" validate:"required,email,max=100"`
 	Password string `json:"password" validate:"required,max=300"`
 }
+
+type LoginUserRequest struct {
+	Username string `json:"username" validate:"required,max=100"`
+	Password string `json:"password" validate:"required,max=100"`
+}
